--- a/src/components/Map/MapMarker/style.scss
+++ b/src/components/Map/MapMarker/style.scss
@@ -1,4 +1,12 @@
 .map-marker {
+    background-color: #ffffff;
+    border-radius: 50%;
+    width: 8px;
+    height: 8px;
+    border: 2px solid #FF851B;
+}
+
+.current-location-marker {
     background-color: #e74c3c;
     border-radius: 50%;
     width: 15px;
