--- a/src/components/SocialIcons/style.scss
+++ b/src/components/SocialIcons/style.scss
@@ -1,16 +1,19 @@
 @import 'breakpoints';
 
 .social-icons {
-  padding: 0.25rem 0;
-  font-size: 3rem;
+  padding: 1rem 0;
+  font-size: 1rem;
 
   @include breakpoint-small-down {
-    font-size: 2.5rem;
+    font-size: 0.8rem;
   }
 
   a {
     padding: 0 0.625rem;
-
+    &:nth-child(1) {
+      padding-left: 0px;
+    }
+    
     &.devto svg {
       margin-bottom: -0.25rem;
       width: 2.7rem;
