--- a/src/pages/LandingPage/style.scss
+++ b/src/pages/LandingPage/style.scss
@@ -19,15 +19,17 @@
             flex: auto;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             text-align: left;
-            border: 2px solid;
-            >.intro-name {
-                font-family: 'Reem Kufi', sans-serif;
-                font-size: 4rem;
-                font-weight: bold;
-                line-height: 4rem;
-                padding-bottom: 1rem;
+            padding: 3em 5em;
+            >.intro-text {
+                font-family: 'Lato', sans-serif;
+                font-size: 0.8rem;
+                width: 60%;
+                text-align: justify;
+                
+                // font-weight: bold;
+                line-height: 30px;
+                // padding-bottom: 1rem;
                 @include breakpoint-small-down {
                     font-size: 3rem;
                     line-height: 3.5rem;
