--- a/src/components/SocialIcons/style.scss
+++ b/src/components/SocialIcons/style.scss
@@ -1,61 +1,67 @@
 @import 'breakpoints';
 
 .social-icons {
-  padding: 1rem 0;
-  font-size: 1rem;
+    padding: 1rem 0;
+    font-size: 1rem;
 
-  @include breakpoint-small-down {
-    font-size: 0.8rem;
-  }
-
-  a {
-    padding: 0 0.625rem;
-    &:nth-child(1) {
-      padding-left: 0px;
+    @include breakpoint-small-down {
+        font-size: 1rem;
+        display: flex;
+        justify-content: space-around;
     }
-    
-    &.devto svg {
-      margin-bottom: -0.25rem;
-      width: 2.7rem;
-      height: 2.7rem;
 
-      @include breakpoint-small-down {
-        margin-bottom: -0.225rem;
-        width: 2.25rem;
-        height: 2.25rem;
-      }
-    }
-  }
-
-  &.animate-icons {
     a {
-      display: inline-block;
-      transform: perspective(1px) translateZ(0);
-      box-shadow: 0 0 1px transparent;
+        padding: 0 0.625rem;
 
-      &:hover,
-      &:focus,
-      &:active {
-        animation-name: icon-wobble;
-        animation-duration: 0.75s;
-        animation-timing-function: ease-in-out;
-        animation-iteration-count: 1;
-      }
-    }
-  }
+        &:nth-child(1) {
+            padding-left: 0px;
+        }
 
-  @keyframes icon-wobble {
-    25% {
-      transform: translateY(-8px);
+        &.devto svg {
+            margin-bottom: -0.25rem;
+            width: 2.7rem;
+            height: 2.7rem;
+
+            @include breakpoint-small-down {
+                margin-bottom: -0.225rem;
+                width: 2.25rem;
+                height: 2.25rem;
+            }
+        }
     }
-    50% {
-      transform: translateY(0px);
+
+    &.animate-icons {
+        a {
+            display: inline-block;
+            transform: perspective(1px) translateZ(0);
+            box-shadow: 0 0 1px transparent;
+
+            &:hover,
+            &:focus,
+            &:active {
+                animation-name: icon-wobble;
+                animation-duration: 0.75s;
+                animation-timing-function: ease-in-out;
+                animation-iteration-count: 1;
+            }
+        }
     }
-    75% {
-      transform: translateY(-4px);
+
+    @keyframes icon-wobble {
+        25% {
+            transform: translateY(-8px);
+        }
+
+        50% {
+            transform: translateY(0px);
+        }
+
+        75% {
+            transform: translateY(-4px);
+        }
+
+        100% {
+            transform: translateY(0px);
+        }
     }
-    100% {
-      transform: translateY(0px);
-    }
-  }
 }
