--- a/src/components/Title/title.scss
+++ b/src/components/Title/title.scss
@@ -1,7 +1,10 @@
+@import 'breakpoints';
+
 .title-wrapper {
     flex: 1;
     background: #142763;
     max-height: 400px;
+
     .title-desc {
         font-family: 'Reem Kufi', sans-serif;
         position: absolute;
@@ -10,14 +13,24 @@
         top: 20%;
         padding: 1.5em 8em;
         color: white;
+
+        @include breakpoint-medium-down {
+            padding: 1em 2em;
+        }
+
         .title {
             font-family: 'Reem Kufi', sans-serif;
             font-size: 2.25em;
         }
+
         .subtitle {
             font-family: 'Roboto', sans-serif;
             letter-spacing: 4px;
             font-size: 0.9em;
+
+            @include breakpoint-medium-down {
+                line-height: 25px;
+            }
         }
     }
 }
