--- a/src/pages/LandingPage/style.scss
+++ b/src/pages/LandingPage/style.scss
@@ -1,72 +1,72 @@
 @import 'breakpoints';
 
-.landing-page {
-    min-height: 100vh;
-    display: flex;
-    flex: 0 1 auto;
-    flex-direction: column;
-    justify-content: center;
+.intro-page {
+	min-height: 100vh;
+	display: flex;
+	flex: 0 1 auto;
+	flex-direction: column;
+	justify-content: center;
 
-    main {
-        display: flex;
-        flex: 1 0 auto;
-        flex-direction: column;
-        justify-content: center;
-        // padding: 3.25rem 1.5rem 1rem;
-        text-align: center;
+	main {
+		display: flex;
+		flex: 1 0 auto;
+		flex-direction: column;
+		justify-content: center;
+		// padding: 3.25rem 1.5rem 1rem;
+		text-align: center;
 
-        @include breakpoint-medium-down {}
+		@include breakpoint-medium-down {
+		}
 
-        .intro-wrapper {
-            flex: auto;
-            display: flex;
-            flex-direction: column;
-            text-align: left;
-            padding: 3em 5em;
+		.intro-wrapper {
+			flex: auto;
+			display: flex;
+			flex-direction: column;
+			text-align: left;
+			padding: 3em 5em;
 
-            @include breakpoint-medium-down {
-                padding: 1.5em 2em;
-                font-size: 1rem;
-                line-height: 1.5;
-            }
+			@include breakpoint-medium-down {
+				padding: 1.5em 2em;
+				font-size: 1rem;
+				line-height: 1.5;
+			}
 
-            >.intro-text {
-                font-family: 'Lato', sans-serif;
-                font-size: 0.8rem;
-                width: 60%;
-                text-align: justify;
+			> .intro-text {
+				font-family: 'Lato', sans-serif;
+				font-size: 0.8rem;
+				width: 60%;
+				text-align: justify;
 
-                // font-weight: bold;
-                line-height: 30px;
+				// font-weight: bold;
+				line-height: 30px;
 
-                // padding-bottom: 1rem;
-                @include breakpoint-medium-down {
-                    font-size: 1rem;
-                    line-height: 1.5;
-                    width: 100%;
-                }
-            }
+				// padding-bottom: 1rem;
+				@include breakpoint-medium-down {
+					font-size: 1rem;
+					line-height: 1.5;
+					width: 100%;
+				}
+			}
 
-            >.tagline {
-                font-size: 1.375rem;
-                margin: 1.5rem 0;
-                font-weight: 300;
+			> .tagline {
+				font-size: 1.375rem;
+				margin: 1.5rem 0;
+				font-weight: 300;
 
-                @include breakpoint-medium-down {
-                    font-size: 1.25rem;
+				@include breakpoint-medium-down {
+					font-size: 1.25rem;
+				}
+			}
+		}
 
-                }
-            }
-        }
+		.browser-notes {
+			font-size: 0.75rem;
 
-        .browser-notes {
-            font-size: 0.75rem;
-
-            span {
-                // border-width: 1px;
-                // border-style: solid;
-                padding: 0.125rem 0.5rem;
-            }
-        }
-    }
+			span {
+				// border-width: 1px;
+				// border-style: solid;
+				padding: 0.125rem 0.5rem;
+			}
+		}
+	}
 }
