--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -50,9 +50,9 @@
 }
 
 .intro {
-  /* position: absolute; */
-  bottom: 0;
-  margin: 8em 0em 5em 0em;
+  position: fixed;
+  bottom: 25%;
+  margin: 0em 2em 0em 0em;
   width: 70vw;
 }
 
@@ -60,9 +60,16 @@
   margin-bottom: 25px;
 }
 
+@media (max-width: 1024px) {
+  .intro {
+    width: 80vw;
+    bottom: 15%;
+  }
+}
+
 @media (max-width: 768px) {
   .intro {
-    width: 100%;
-    margin-top: 5em;
+    width: 80vw;
+    margin-top: 10em;
   }
 }
